# fbdam

./: .gitignore  README.md  READMEOld.md  history-commands.txt  kpis.py  pyproject.toml  run_experiment.sh  setup_venv.sh  working.py
analysis/: kpi_table.py  kpis.yaml  lib_alloc_plots.py  manual_analysis copy.ipynb  manual_analysis.ipynb  plot_allocation_per_member_from_solution_dir.py  plot_from_solution_dir.py  plot_kpis.py
changes/: infeasibility-handling-2025-10-20.md
configs/: alpha-0.4.yaml  alpha-0.6.yaml  dials-adequacy.yaml  dials-allocation-equity.yaml  dials-balanced.yaml  dials-efficiency.yaml  dials-equity-adequacy.yaml  dials-fairness-adequacy.yaml  dials-fairness.yaml  dials-gradual.yaml  dials-hard-adequacy.yaml  dials-hard-fairness.yaml  dials-hierarchical.yaml
docs/: FBDAM-Mathematical Specification.md  FBDAM-backbone-model-simplified.md  FBDAM-backbone-model.md  FBDAM-model_v1.0.tex  Mathematical-model-complete-description.md
guides/: code_principles_guide_v_2.md  config_catalogs_guide.md  fairness_equity_semanting_guiding_principles_v1.0.md  fbdam-code-principles_v1.0.md  fbdam-reporting-guide.md  general-code-principles-guide_v2.md  io-guide.md  model-builder-guide.md  quick-start.md  reporting-guide.md
how-to/: io-utilization-and-validation.md
profiles/: gap-limited.yaml  time-limited.yaml
scenarios/: demo-balanced.yaml  demo-tnu.yaml  demo.yaml  demo_efficiency.yaml  demo_infeasible.yaml  ds-a_alpha-0.4.yaml  ds-a_alpha-0.6.yaml  ds-a_dials-adequacy.yaml  ds-a_dials-allocation-equity.yaml  ds-a_dials-balanced.yaml  ds-b_alpha-0.4.yaml  (+12 more)
(+870 files in other folders)
